Added project and bio page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Amy Murlowski
+title: Amy Murlowski, BSN, RN
 domain: amymurlowski.github.io
 description: >-
-  Amy Murlowski Bio, resume and projects
+  Doctorate of Nursing Practice Student, focusing on clinical infrastructure and overall practice readiness for patients of size.
 baseurl: ""
 url: "https://amymurlowski.github.io"
 
