--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ url: "https://amymurlowski.github.io"
 
 # Build settings
 markdown: kramdown
-remote_theme: eliottvincent/bay
-# theme: bay_jekyll_theme
+theme: bay_jekyll_theme
 
 plugins:
   - jekyll-feed
